--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 									<a href="#" class="image fit"><img src="images/dowjones.png" alt="" /></a>
 									<p>This MATLAB project was made to analyze various strategies surrounding the Dow Jones index through linear algebra, comparing results from sample covariance vs. single-factor covariance, and long-only vs. long-short vs. 30/130 investing.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">See Project</a></li>
+										<li><a href="files/DowJones.xslx">Download File class="button">See Project</a></li>
 									</ul>
 								</article>
 							</section>
