--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<a href="#" class="image fit"><img src="images/arbitrage.png" alt="" /></a>
 									<p>The purpose of this project was to utilize MATLAB's linprog function in order to find the optimal solution to the linear programming, thus proving whether or not there is an arbitrage opportunity in the set of derivative securities.</p>
 									<ul class="actions special">
-										<li><a href="files/DowJones.xslx" class="button" download>See Project</a></li>
+										<a href="files/DowJones.xlsx" download>Download link</a>
 									</ul>
 								</article>
 								<article>
@@ -87,7 +87,7 @@
 									<a href="#" class="image fit"><img src="images/yfinance.png" alt="" /></a>
 									<p>The goal of this Python project was to analyze financial statements through Yahoo Finance in order to better interpret and compare metrics between companies varying in size, industry, etc. in an effecient way.</p>
 									<ul class="actions special">
-										<li><a href="files/DowJones.xslx" download class="button">See Project</a></li>
+										<a href="files/DowJones.xlsx" download="DowJones.xlsx">Download link</a>
 									</ul>
 								</article>
 								<article>
@@ -98,7 +98,7 @@
 									<a href="#" class="image fit"><img src="images/dowjones.png" alt="" /></a>
 									<p>This MATLAB project was made to analyze various strategies surrounding the Dow Jones index through linear algebra, comparing results from sample covariance vs. single-factor covariance, and long-only vs. long-short vs. 30/130 investing.</p>
 									<ul class="actions special">
-										<li><a href="files/DowJones.xslx">Download File class="button">See Project</a></li>
+										<li><a href="files/DowJones.xlsx" download>Download link class="button">See Project</a></li>
 									</ul>
 								</article>
 							</section>
