--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
 									<a href="#" class="image fit"><img src="images/yfinance.png" alt="" /></a>
 									<p>The goal of this Python project was to analyze financial statements through Yahoo Finance in order to better interpret and compare metrics between companies varying in size, industry, etc. in an effecient way.</p>
 									<ul class="actions special">
-										<a href="files/DowJones.xlsx" download="DowJones.xlsx">Download link</a>
+										<form method="get" action="files/DowJones.xlsx">
+										   <button type="submit">Download!</button>
+										</form>
+
 									</ul>
 								</article>
 								<article>
@@ -98,7 +101,8 @@
 									<a href="#" class="image fit"><img src="images/dowjones.png" alt="" /></a>
 									<p>This MATLAB project was made to analyze various strategies surrounding the Dow Jones index through linear algebra, comparing results from sample covariance vs. single-factor covariance, and long-only vs. long-short vs. 30/130 investing.</p>
 									<ul class="actions special">
-										<li><a href="files/DowJones.xlsx" download>Download link class="button">See Project</a></li>
+										<button type="submit" onclick="window.open('files/DowJones.xlsx')">Download!</button>
+
 									</ul>
 								</article>
 							</section>
