--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/montecarlo.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">See project</a></li>
+									<button type="submit" onclick="window.open('files/RocketModel.pdf')">Download Paper</button>
 								</ul>
 							</article>
 
@@ -65,7 +65,7 @@
 									<a href="#" class="image fit"><img src="images/dedicatedportfolio.png" alt="" /></a>
 									<p>This Excel project focuses on linear and quadratic programming methods such as the Simplex method in order to find the ideal stock and bond portfolio given the initial parameters.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">See Project</a></li>
+										<button type="submit" onclick="window.open('DedicatedPortfolio.xlsx')">Download Project</button>
 									</ul>
 								</article>
 								<article>
@@ -76,7 +76,7 @@
 									<a href="#" class="image fit"><img src="images/arbitrage.png" alt="" /></a>
 									<p>The purpose of this project was to utilize MATLAB's linprog function in order to find the optimal solution to the linear programming, thus proving whether or not there is an arbitrage opportunity in the set of derivative securities.</p>
 									<ul class="actions special">
-										<a href="files/DowJones.xlsx" download>Download link</a>
+										<button type="submit" onclick="window.open('files/ArbitrageDetection.zip')">Download Project</button>
 									</ul>
 								</article>
 								<article>
@@ -87,10 +87,7 @@
 									<a href="#" class="image fit"><img src="images/yfinance.png" alt="" /></a>
 									<p>The goal of this Python project was to analyze financial statements through Yahoo Finance in order to better interpret and compare metrics between companies varying in size, industry, etc. in an effecient way.</p>
 									<ul class="actions special">
-										<form method="get" action="files/DowJones.xlsx">
-										   <button type="submit">Download!</button>
-										</form>
-
+										<button type="submit" onclick="window.open('files/FinancialStatementAnalysis.ipynb')">Download Project</button>
 									</ul>
 								</article>
 								<article>
@@ -101,8 +98,7 @@
 									<a href="#" class="image fit"><img src="images/dowjones.png" alt="" /></a>
 									<p>This MATLAB project was made to analyze various strategies surrounding the Dow Jones index through linear algebra, comparing results from sample covariance vs. single-factor covariance, and long-only vs. long-short vs. 30/130 investing.</p>
 									<ul class="actions special">
-										<button type="submit" onclick="window.open('files/DowJones.xlsx')">Download!</button>
-
+										<button type="submit" onclick="window.open('files/DowJones.zip')">Download Project</button>
 									</ul>
 								</article>
 							</section>
