--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
 										<span class="date">Quantitative Finance</span>
 										<h2><a href="#">Dedicated Portfolio</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/dedicatedportfolio.png" alt="" /></a>
+									<a class="image fit"><img src="images/dedicatedportfolio.png" alt="" /></a>
 									<p>This Excel project focuses on linear and quadratic programming methods such as the Simplex method in order to find the ideal stock and bond portfolio given the initial parameters.</p>
 									<ul class="actions special">
-										<button type="submit" onclick="window.open('DedicatedPortfolio.xlsx')">Download Project</button>
+										<form method="get" action="DedicatedPortfolio.xlsx">
+											<button type="submit">Download Project</button>
+										</form>
 									</ul>
 								</article>
 								<article>
