--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">Aerospace Engineering Project</span>
-									<h2><a href="#">Thermodynamic<br />
+									<h2><a Thermodynamic<br />
 									Rocket Model</a></h2>
 									<p>In this AIAA paper, I develop two bottle rocket launch models derived from aerodynamic and thermodynamic principles in MATLAB. The first model being a 2-dimensional with varying parameters in order to analyze their effects on rocket trajectory and thrust. The second model will be 3-dimensional, to account for external forces acting on the rocket, with a Monte Carlo simulation to reflect uncertainties in initial data. Paper and code provided in the appendix.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/montecarlo.png" alt="" /></a>
+								<a class="image main"><img src="images/montecarlo.png" alt="" /></a>
 								<ul class="actions special">
 									<button type="submit" onclick="window.open('files/RocketModel.pdf')">Download Paper</button>
 								</ul>
@@ -60,14 +60,13 @@
 								<article>
 									<header>
 										<span class="date">Quantitative Finance</span>
-										<h2><a href="#">Dedicated Portfolio</a></h2>
+										<h2><a Dedicated Portfolio</a></h2>
 									</header>
 									<a class="image fit"><img src="images/dedicatedportfolio.png" alt="" /></a>
 									<p>This Excel project focuses on linear and quadratic programming methods such as the Simplex method in order to find the ideal stock and bond portfolio given the initial parameters.</p>
 									<ul class="actions special">
-										<form method="get" action="DedicatedPortfolio.xlsx">
-											<button type="submit">Download Project</button>
-										</form>
+										<a href="files/DedicatedPortfolio.xlsx" download="DedicatedPortfolio.xlsx">Download</a>
+										<a href="files/" download="DedicatedPortfolio.xlsx">Download</a>
 									</ul>
 								</article>
 								<article>
