--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">Aerospace Engineering Project</span>
-									<h2><a href="#">Thermodynamic<br />
+									<h2><a >Thermodynamic<br />
 									Rocket Model</a></h2>
 									<p>In this AIAA paper, I develop two bottle rocket launch models derived from aerodynamic and thermodynamic principles in MATLAB. The first model being a 2-dimensional with varying parameters in order to analyze their effects on rocket trajectory and thrust. The second model will be 3-dimensional, to account for external forces acting on the rocket, with a Monte Carlo simulation to reflect uncertainties in initial data. Paper and code provided in the appendix.</p>
 								</header>
@@ -71,7 +71,7 @@
 								<article>
 									<header>
 										<span class="date">Quantitative Finance</span>
-										<h2><a href="#">Arbitrage Detection</a></h2>
+										<h2><a >Arbitrage Detection</a></h2>
 									</header>
 									<a class="image fit"><img src="images/arbitrage.png" alt="" /></a>
 									<p>The purpose of this project was to utilize MATLAB's linprog function in order to find the optimal solution to the linear programming, thus proving whether or not there is an arbitrage opportunity in the set of derivative securities.</p>
@@ -82,7 +82,7 @@
 								<article>
 									<header>
 										<span class="date">Finance</span>
-										<h2><a href="#">Financial Statement Analysis</a></h2>
+										<h2><a >Financial Statement Analysis</a></h2>
 									</header>
 									<a class="image fit"><img src="images/yfinance.png" alt="" /></a>
 									<p>The goal of this Python project was to analyze financial statements through Yahoo Finance in order to better interpret and compare metrics between companies varying in size, industry, etc. in an effecient way.</p>
@@ -93,7 +93,7 @@
 								<article>
 									<header>
 										<span class="date">Quantitative Finance</span>
-										<h2><a href="#">Dow Jones Strategic Analysis</a></h2>
+										<h2><a >Dow Jones Strategic Analysis</a></h2>
 									</header>
 									<a class="image fit"><img src="images/dowjones.png" alt="" /></a>
 									<p>This MATLAB project was made to analyze various strategies surrounding the Dow Jones index through linear algebra, comparing results from sample covariance vs. single-factor covariance, and long-only vs. long-short vs. 30/130 investing.</p>
