--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 									<span class="date">Aerospace Engineering Project</span>
 									<h2><a >Thermodynamic<br />
 									Rocket Model</a></h2>
-									<p>In this AIAA paper, I develop two bottle rocket launch models derived from aerodynamic and thermodynamic principles in MATLAB. The first model being a 2-dimensional with varying parameters in order to analyze their effects on rocket trajectory and thrust. The second model will be 3-dimensional, to account for external forces acting on the rocket, with a Monte Carlo simulation to reflect uncertainties in initial data. Paper and code provided in the appendix.</p>
+									<p>In this AIAA paper, I develop two bottle rocket launch models derived from aerodynamic and thermodynamic principles in MATLAB. The first model is 2-dimensional with varying parameters in order to analyze their effects on rocket trajectory and thrust. The second model is 3-dimensional, to account for external forces acting on the rocket, with a Monte Carlo simulation to reflect uncertainties in initial data. Paper and code provided in the appendix.</p>
 								</header>
 								<a class="image main"><img src="images/montecarlo.png" alt="" /></a>
 								<ul class="actions special">
@@ -63,7 +63,7 @@
 										<h2><a >Dedicated Portfolio</a></h2>
 									</header>
 									<a class="image fit"><img src="images/dedicatedportfolio.png" alt="" /></a>
-									<p>This Excel project focuses on linear and quadratic programming methods such as the Simplex method in order to find the ideal stock and bond portfolio given the initial parameters.</p>
+									<p>This Excel project focuses on linear and quadratic programming methods, such as the Simplex method, in order to find the ideal stock and bond portfolio given the initial parameters.</p>
 									<ul class="actions special">
 										<button type="submit" onclick="window.open('files/DedicatedPortfolio.zip')">Download Project</button>
 									</ul>
@@ -74,7 +74,7 @@
 										<h2><a >Arbitrage Detection</a></h2>
 									</header>
 									<a class="image fit"><img src="images/arbitrage.png" alt="" /></a>
-									<p>The purpose of this project was to utilize MATLAB's linprog function in order to find the optimal solution to the linear programming, thus proving whether or not there is an arbitrage opportunity in the set of derivative securities.</p>
+									<p>The purpose of this project was to utilize MATLAB's linprog function in order to find the optimal solution to the linear programming problem, thus proving whether or not there is an arbitrage opportunity in the set of derivative securities.</p>
 									<ul class="actions special">
 										<button type="submit" onclick="window.open('files/ArbitrageDetection.zip')">Download Project</button>
 									</ul>
