--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
 								<article>
 									<header>
 										<span class="date">Quantitative Finance</span>
+										<h2><a >Dedicated Portfolio</a></h2>
+									</header>
+									<a class="image fit"><img src="images/dedicatedportfolio.png" alt="" /></a>
+									<p>This Excel project focuses on linear and quadratic programming methods, such as the Simplex method, in order to find the ideal stock and bond portfolio given the initial parameters.</p>
+									<ul class="actions special">
+										<button type="submit" onclick="window.open('files/DedicatedPortfolio.zip')">Download Project</button>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">Quantitative Finance</span>
 										<h2><a >Arbitrage Detection</a></h2>
 									</header>
 									<a class="image fit"><img src="images/arbitrage.png" alt="" /></a>
