--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									<a class="image fit"><img src="images/dedicatedportfolio.png" alt="" /></a>
 									<p>This Excel project focuses on linear and quadratic programming methods, such as the Simplex method, in order to find the ideal stock and bond portfolio given the initial parameters.</p>
 									<ul class="actions special">
-										<button type="submit" onclick="window.open('files/DedicatedPortfolio.zip')">Download Project</button>
+										<button type="submit" onclick="https://docs.google.com/spreadsheets/d/1A9WMv3HDsHNEWpCzzmhHVw_3xLcE1_SS-XnpTxzwTMU/edit?usp=sharing">View Spreadsheet</button>
 									</ul>
 								</article>
 								<article>
