--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">Quantitative Finance</span>
-										<h2><a >Dedicated Portfolio</a></h2>
+										<span class="date">Sports</span>
+										<h2><a >March Madness Analysis</a></h2>
 									</header>
-									<a class="image fit"><img src="images/dedicatedportfolio.png" alt="" /></a>
-									<p>This Excel project focuses on linear and quadratic programming methods, such as the Simplex method, in order to find the ideal stock and bond portfolio given the initial parameters.</p>
+									<a class="image fit"><img src="images/marchmadness.png" alt="" /></a>
+									<p>I made this Google Sheets project to compare the metrics of every March Madness team and collaborate with friends to accurately predict matchups. Code has been removed and added in notes in case website html's change and to prevent slow loading due to the large number of requests. Next steps include conference matchup history and regression to identify importance of each factor.</p>
 									<ul class="actions special">
-										<button type="submit" onclick="https://docs.google.com/spreadsheets/d/1A9WMv3HDsHNEWpCzzmhHVw_3xLcE1_SS-XnpTxzwTMU/edit?usp=sharing">View Spreadsheet</button>
+										<button type="submit" onclick="window.open('https://docs.google.com/spreadsheets/d/1A9WMv3HDsHNEWpCzzmhHVw_3xLcE1_SS-XnpTxzwTMU/edit?usp=sharing')">View Spreadsheet</button>
 									</ul>
 								</article>
 								<article>
