--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 										<h2><a >March Madness Analysis</a></h2>
 									</header>
 									<a class="image fit"><img src="images/marchmadness.png" alt="" /></a>
-									<p>I made this Google Sheets project to compare the metrics of every March Madness team and collaborate with friends to accurately predict matchups. Code has been removed and added in notes in case website html's change and to prevent slow loading due to the large number of requests. Next steps include conference matchup history and regression to identify importance of each factor.</p>
+									<p>I made this Google Sheets project to compare the metrics of every March Madness team and collaborate with friends to accurately predict matchups by webscraping various websites. Code has been removed and added in notes in case website html's change and to prevent slow loading due to the large number of requests. Next steps include conference matchup history and regression to identify importance of each factor.</p>
 									<ul class="actions special">
 										<button type="submit" onclick="window.open('https://docs.google.com/spreadsheets/d/1A9WMv3HDsHNEWpCzzmhHVw_3xLcE1_SS-XnpTxzwTMU/edit?usp=sharing')">View Spreadsheet</button>
 									</ul>
