--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
 										<span class="date">Freelance Project</span>
 										<h2><a >Product Review Generator</a></h2>
 									</header>
-									<a class="image fit"><img src="images/dowjones.png" alt="" /></a>
+									<a class="image fit"><img src="images/Screen Shot 2022-04-12 at 1.46.15 AM.png" alt="" /></a>
 									<p>The objective of this freelance job was to create a program that can create random fake reviews for a startup's product, given a set of adjectives and positive descriptors.</p>
 									<ul class="actions special">
-										<button type="submit" onclick="window.open('files/DowJones.zip')">Download Project</button>
+										<button type="submit" onclick="window.open('files/Review Generator.ipynb')">Download Project</button>
 									</ul>
 								</article>
 							</section>
