--- a/index.html
+++ b/index.html
@@ -44,17 +44,16 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">Aerospace Engineering Project</span>
-									<h2><a >Thermodynamic<br />
-									Rocket Model</a></h2>
-									<p>In this AIAA paper, I develop two bottle rocket launch models derived from aerodynamic and thermodynamic principles in MATLAB. The first model is 2-dimensional with varying parameters in order to analyze their effects on rocket trajectory and thrust. The second model is 3-dimensional, to account for external forces acting on the rocket, with a Monte Carlo simulation to reflect uncertainties in initial data. Paper and code provided in the appendix.</p>
+									<span class="date">Quantitative Finance</span>
+									<h2><a >Arbitrage Detection<br /></a></h2>
+									<p>The purpose of this project was to utilize MATLAB's linprog function in order to find the optimal solution to the linear programming problem, thus proving whether or not there is an arbitrage opportunity in the set of derivative securities.</p>
 								</header>
-								<a class="image main"><img src="images/montecarlo.png" alt="" /></a>
+								<a class="image main"><img src="images/arbitrage.png" alt="" /></a>
 								<ul class="actions special">
-									<button type="submit" onclick="window.open('files/RocketModel.pdf')">Download Paper</button>
+									<button type="submit" onclick="window.open('files/ArbitrageDetection.zip')">Download Paper</button>
 								</ul>
 							</article>
-
+						
 						<!-- Posts -->
 							<section class="posts">
 								<article>
@@ -124,6 +123,20 @@
 									</ul>
 								</article>
 							</section>
+						
+						<!-- Featured Post -->
+							<article class="post featured">
+								<header class="major">
+									<span class="date">Aerospace Engineering Project</span>
+									<h2><a >Thermodynamic<br />
+									Rocket Model</a></h2>
+									<p>In this AIAA paper, I develop two bottle rocket launch models derived from aerodynamic and thermodynamic principles in MATLAB. The first model is 2-dimensional with varying parameters in order to analyze their effects on rocket trajectory and thrust. The second model is 3-dimensional, to account for external forces acting on the rocket, with a Monte Carlo simulation to reflect uncertainties in initial data. Paper and code provided in the appendix.</p>
+								</header>
+								<a class="image main"><img src="images/montecarlo.png" alt="" /></a>
+								<ul class="actions special">
+									<button type="submit" onclick="window.open('files/RocketModel.pdf')">Download Paper</button>
+								</ul>
+							</article>
 
 					</div>
 
