--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">Quantitative Finance</span>
-										<h2><a >Arbitrage Detection</a></h2>
+										<span class="date">Aerospace Engineering Project</span>
+										<h2><a >Thermodynamic Rocket Model</a></h2>
 									</header>
-									<a class="image fit"><img src="images/arbitrage.png" alt="" /></a>
-									<p>The purpose of this project was to utilize MATLAB's linprog function in order to find the optimal solution to the linear programming problem, thus proving whether or not there is an arbitrage opportunity in the set of derivative securities.</p>
+									<a class="image fit"><img src="images/montecarlo.png" alt="" /></a>
+									<p>In this AIAA paper, I develop two bottle rocket launch models derived from aerodynamic and thermodynamic principles in MATLAB. The first model is 2-dimensional with varying parameters in order to analyze their effects on rocket trajectory and thrust. The second model is 3-dimensional, to account for external forces acting on the rocket, with a Monte Carlo simulation to reflect uncertainties in initial data. Paper and code provided in the appendix.</p>
 									<ul class="actions special">
-										<button type="submit" onclick="window.open('files/ArbitrageDetection.zip')">Download Project</button>
+										<button type="submit" onclick="window.open('files/RocketModel.pdf')">Download Project</button>
 									</ul>
 								</article>
 								<article>
@@ -123,20 +123,7 @@
 									</ul>
 								</article>
 							</section>
-						
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<span class="date">Aerospace Engineering Project</span>
-									<h2><a >Thermodynamic<br />
-									Rocket Model</a></h2>
-									<p>In this AIAA paper, I develop two bottle rocket launch models derived from aerodynamic and thermodynamic principles in MATLAB. The first model is 2-dimensional with varying parameters in order to analyze their effects on rocket trajectory and thrust. The second model is 3-dimensional, to account for external forces acting on the rocket, with a Monte Carlo simulation to reflect uncertainties in initial data. Paper and code provided in the appendix.</p>
-								</header>
-								<a class="image main"><img src="images/montecarlo.png" alt="" /></a>
-								<ul class="actions special">
-									<button type="submit" onclick="window.open('files/RocketModel.pdf')">Download Paper</button>
-								</ul>
-							</article>
+					
 
 					</div>
 
