--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">Aerospace Engineering Project</span>
+										<span class="date">Aerospace Engineering</span>
 										<h2><a >Thermodynamic Rocket Model</a></h2>
 									</header>
 									<a class="image fit"><img src="images/montecarlo.png" alt="" /></a>
-									<p>In this AIAA paper, I develop two bottle rocket launch models derived from aerodynamic and thermodynamic principles in MATLAB. The first model is 2-dimensional with varying parameters in order to analyze their effects on rocket trajectory and thrust. The second model is 3-dimensional, to account for external forces acting on the rocket, with a Monte Carlo simulation to reflect uncertainties in initial data. Paper and code provided in the appendix.</p>
+									<p>This AIAA paper outlines two bottle rocket launch models derived from aerodynamic and thermodynamic principles in MATLAB. The 2-dimensional model is used to analyze various parameters and their effects on rocket trajectory and thrust. The 3-dimensional model uses a Monte Carlo simulation to analyze external forces through uncertainties in initial data. Paper and code provided in the appendix.</p>
 									<ul class="actions special">
 										<button type="submit" onclick="window.open('files/RocketModel.pdf')">Download Project</button>
 									</ul>
