--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								<article>
 									<header>
 										<span class="date">Quantitative Finance</span>
-										<h2><a >Dedicated Portfolio</a></h2>
+										<h2><a >Stock and Bond Dedicated Portfolio</a></h2>
 									</header>
 									<a class="image fit"><img src="images/dedicatedportfolio.png" alt="" /></a>
 									<p>This Excel project focuses on linear and quadratic programming methods, such as the Simplex method, in order to find the ideal stock and bond portfolio given the initial parameters.</p>
