--- a/index.html
+++ b/index.html
@@ -167,5 +167,15 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
+		<div class="loader-wrapper">
+     			<span class="loader"><span class="loader-inner"></span></span>
+    		</div>
+
+    		<script>
+        		$(window).on("load",function(){
+          		  $(".loader-wrapper").fadeOut("slow");
+        		});
+    		</script>
+						
 	</body>
 </html>
