--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 									<h2><a >Arbitrage Detection<br /></a></h2>
 									<p>The purpose of this project was to utilize MATLAB's linprog function in order to find the optimal solution to the linear programming problem, thus proving whether or not there is an arbitrage opportunity in the set of derivative securities.</p>
 								</header>
-								[![IMAGE ALT TEXT](https://www.youtube.com/watch?v=iRK1jYki_ds&ab_channel=TravyPatty/0.jpg)](https://www.youtube.com/watch?v=iRK1jYki_ds&ab_channel=TravyPatty "Video Title")
+								[![Program Walkthrough - Using Python to Automate Woodcutting in Runescape](https://www.youtube.com/watch?v=iRK1jYki_ds&ab_channel=TravyPatty/0.jpg)](https://www.youtube.com/watch?v=iRK1jYki_ds&ab_channel=TravyPatty "Video Title")
 								<!--  <a class="image main"><img src="images/arbitrage.png" alt="" /></a>  -->
 								<ul class="actions special">
 									<button type="submit" onclick="window.open('files/ArbitrageDetection.zip')">Download Paper</button>
