--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">Quantitative Finance</span>
-									<h2><a >Arbitrage Detection<br /></a></h2>
-									<p>The purpose of this project was to utilize MATLAB's linprog function in order to find the optimal solution to the linear programming problem, thus proving whether or not there is an arbitrage opportunity in the set of derivative securities.</p>
+									<span class="date">Videogames</span>
+									<h2><a >Automating Runescape Woodcutting<br /></a></h2>
+									<p>I challenged myself to utilize Pynput and ImageGrab in Python to create a program that would automatically farm logs in one of my favorite childhood videogames, Runescape. Click the thumbnail for a full video walkthrough!</p>
 								</header>
-								<a class="image main"><img src="images/arbitrage.png" alt="" /></a>
+								<a href="http://www.youtube.com/watch?feature=player_embedded&v=iRK1jYki_ds" target="_blank"><img src="http://img.youtube.com/vi/iRK1jYki_ds/0.jpg" alt="Program Walkthrough - Using Python to Automate Woodcutting in Runescape" width="240" height="180" border="10" /></a>
 								<ul class="actions special">
 									<button type="submit" onclick="window.open('files/ArbitrageDetection.zip')">Download Paper</button>
 								</ul>
@@ -158,7 +158,7 @@
 									<h2><a >Automating Runescape Woodcutting<br /></a></h2>
 									<p>I challenged myself to utilize Pynput and ImageGrab in Python to create a program that would automatically farm logs in one of my favorite childhood videogames, Runescape. Click the thumbnail for a full video walkthrough!</p>
 								</header>
-								<a href="http://www.youtube.com/watch?feature=player_embedded&v=iRK1jYki_ds" target="_blank"><img src="http://img.youtube.com/vi/iRK1jYki_ds/0.jpg" alt="Program Walkthrough - Using Python to Automate Woodcutting in Runescape" width="240" height="180" border="10" /></a>
+								<a href="http://www.youtube.com/watch?feature=player_embedded&v=iRK1jYki_ds" target="_blank"><img src="http://img.youtube.com/vi/iRK1jYki_ds/0.jpg" alt="Program Walkthrough - Using Python to Automate Woodcutting in Runescape" /></a>
 								<ul class="actions special">
 									<button type="submit" onclick="window.open('files/ArbitrageDetection.zip')">Download Paper</button>
 								</ul>
