--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 								</header>
 								<a href="http://www.youtube.com/watch?feature=player_embedded&v=iRK1jYki_ds" target="_blank"><img src="http://img.youtube.com/vi/iRK1jYki_ds/0.jpg" alt="Program Walkthrough - Using Python to Automate Woodcutting in Runescape" /></a>
 								<ul class="actions special">
-									<button type="submit" onclick="window.open('files/RunescapeWoodcutting.zip')">Download Files</button>
+									<button type="submit" onclick="window.open('files/Runescape_Auto_Woodcutting.ipynb')">Download Project</button>
 								</ul>
 							</article>
 					
