--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 									<h2><a >Automating Runescape Woodcutting<br /></a></h2>
 									<p>I challenged myself to utilize Pynput and ImageGrab in Python to create a program that would automatically farm logs in one of my favorite childhood videogames, Runescape. Click the thumbnail for a full video walkthrough!</p>
 								</header>
-								<a href="http://www.youtube.com/watch?feature=player_embedded&v=iRK1jYki_ds" target="_blank"><img src="images/RunescapeWCThumbnail.png" alt="Program Walkthrough - Using Python to Automate Woodcutting in Runescape" width="240" height="180" border="10" /></a>
+								<a href="http://www.youtube.com/watch?feature=player_embedded&v=iRK1jYki_ds" target="_blank"><img src="images/RunescapeWCThumbnail.png" alt="Program Walkthrough - Using Python to Automate Woodcutting in Runescape" /></a>
 								<ul class="actions special">
 									<button type="submit" onclick="window.open('files/ArbitrageDetection.zip')">Download Paper</button>
 								</ul>
